# learn-agent

./: .gitignore  CLAUDE.md  README.md  TASKS.md  prompt.md
daily/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  40.md  (+11 more)
leetcode/hot100/: 0001_两数之和.py  0002_两数相加.py  0003_无重复字符的最长子串.py  0004_寻找两个正序数组的中位数.py  0005_最长回文子串.py  0011_盛最多水的容器.py  0015_三数之和.py  0017_电话号码的字母组合.py  0019_删除链表的倒数第N个结点.py  0020_有效的括号.py  0021_合并两个有序链表.py  0022_括号生成.py  0023_合并K个升序链表.py  0024_两两交换链表中的节点.py  0025_K个一组翻转链表.py  0031_下一个排列.py  0032_最长有效括号.py  0033_搜索旋转排序数组.py  0034_在排序数组中查找元素的第一个和最后一个位置.py  0035_搜索插入位置.py  0039_组合总和.py  0041_缺失的第一个正数.py  0042_接雨水.py  0045_跳跃游戏 II.py  0045_跳跃游戏_II.py  0046_全排列.py  0048_旋转图像.py  0049_字母异位词分组.py  0051_N皇后.py  0053_最大子数组和.py  0054_螺旋矩阵.py  0055_跳跃游戏.py  0056_合并区间.py  0062_不同路径.py  0064_最小路径和.py  0070_爬楼梯.py  0072_编辑距离.py  0073_矩阵置零.py  0074_搜索二维矩阵.py  0075_颜色分类.py  (+68 more)
notes/: agent-learning-roadmap.md  agent-learning-roadmap（精简版）.md  notes_review.md  学习路线 .md
notes/engineering/: fastapi-basics.md  pytest-basics.md  python-asyncio.md  python-syntax-1.md  python-syntax-2.md  python-types.md
projects/code-review-agent/: .env.example  README.md  pyproject.toml
projects/code-review-agent/src/: config.py  llm_client.py  server.py  simple_agent.py
projects/code-review-agent/tests/: httpx_test.py  schemas_test.py  simple_agent_test.py
(+14 files in other folders)
