[project]
name = "code-review-agent"
version = "0.1.0"
description = "AI-powered code review agent using AST static analysis + LLM semantic analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",       # DeepSeek 兼容 OpenAI SDK
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
